submit java-oop-ru/code-generation